# asvspoof5-domain-invariant-cm

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  cat_ouput.out  pyproject.toml  rq4_cka_results.csv  rq4_results_summary.csv
.cursor/plans/: asvspoof5_dann_runnable_60e9cbdc.plan.md
configs/: smoke_test.yaml  smoke_test_dann.yaml  trillsson_baseline.yaml  w2v2_dann.yaml  w2v2_dann_v2.yaml  w2v2_erm.yaml  w2v2_erm_aug.yaml  wavlm_dann.yaml  wavlm_dann_extended.yaml  wavlm_erm.yaml  wavlm_erm_aug.yaml
configs/eval/: domain_splits.yaml  track1_metrics.yaml
configs/model/: trillsson.yaml  w2v2_base.yaml  wavlm_base.yaml
configs/train/: dann.yaml  erm.yaml  sweeps.yaml
docs/: MULTI_SEED.md  RQ4_FINDINGS.md  THESIS_SUMMARY.md  asvspoof5_domains.md  audit_optionB.md  audit_report_full.md  augmentation_design.md  cluster_quickstart.md  dataset.md  docs_audit_report.md  evaluation.md  limitations.md  methodology.md  metrics_alignment.md  prompt.md  proposal.md  reproducibility.md  thesis_figures_spec.md  trillsson_offline_extraction.md
docs/presentation/: README.md  presentation.html
figures/tables/: T1_main_results.md  T1_main_results.tex  T2_per_codec.md  T2_per_codec.tex  T3_ood_gap.md  T3_ood_gap.tex  T5_dataset_stats.md  T5_dataset_stats.tex  T6_augmentation.md  T6_augmentation.tex  T7_hyperparameters.md  T7_hyperparameters.tex
notebooks/: rq4_activation_patching.ipynb  rq4_activation_patching.py  thesis_results.ipynb
results/: dev_eer_multiseed.json  rq4_cka_results_v2.csv  rq4_results_summary_v2.csv
scripts/: analyze_codec_coverage.py  compare_backbone_codec_probes.py  download_asvspoof5.sh  evaluate.py  extract_dann_dynamics.py  extract_lfcc.py  extract_mfcc.py  extract_pool_weights.py  extract_pool_weights_trajectory.py  extract_trillsson.py  generate_thesis_tables.py  inspect_domains.py  make_manifest.py  plot_codec_artifacts.py  plot_codec_probe_vs_pool_shift.py  plot_det_curves.py  plot_ood_gap.py  plot_ood_gap_multi_seed.py  plot_pca.py  plot_per_codec.py  plot_pool_weight_trajectory.py  plot_pooling_weights.py  plot_rq3_combined.py  plot_rq4_intervention.py  plot_rq4_representation_dr.py  plot_transplant_results.py  precompute_augmentations.py  prepare_asvspoof5.py  probe_domain.py  probe_projection.py  rq4_stats.py  run_cka.py  run_domain_probe.py  run_held_out_codec.py  run_patching.py  run_probes.py  shortcut_classifier.py  thesis_style.py  train.py  train_lfcc_gmm.py  (+4 more)
scripts/jobs/: _job_common.sh  download_dataset.job  eval_multi_seed.job  evaluate_all_rq1.job  evaluate_models.job  extract_all_pool_weights.sh  extract_pool_trajectories.sh  merge_augmentation_manifests.job  precompute_augmentations.job  probe_domain.job  probe_multi_seed.job  retrain_and_analyze_seed42.job  run_analysis.job  run_baselines.job  run_held_out.job  run_trillsson.job  setup_environment.job  stage_dataset.job  submit_all.sh  train_multi_seed.job  train_w2v2_dann.job  train_w2v2_erm.job  train_w2v2_erm_aug.job  train_wavlm_dann.job  train_wavlm_dann_extended.job  train_wavlm_erm.job  train_wavlm_erm_aug.job
src/asvspoof5_domain_invariant_cm/: __init__.py
src/asvspoof5_domain_invariant_cm/analysis/: __init__.py  patching.py  probes.py  repr_similarity.py
src/asvspoof5_domain_invariant_cm/data/: __init__.py  asvspoof5.py  audio.py  codec_augment.py
tests/: __init__.py  test_analysis.py  test_config.py  test_dataset_shapes.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_protocol_parse.py  test_training.py
(+28 files in other folders)
