[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "asvspoof5-domain-invariant-cm"
version = "0.1.0"
description = "Domain-invariant speech deepfake detection on ASVspoof 5 (Track 1) using DANN and mechanistic analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mike", email = "your.email@student.uva.nl" }]
keywords = [
    "audio",
    "deepfake",
    "asvspoof",
    "speech",
    "domain-adaptation",
    "domain-adversarial",
    "dann",
    "wavlm",
    "wav2vec2",
    "interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pyyaml>=6.0.1",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.41",
    "datasets>=2.20",
    "accelerate>=0.33",
    "einops>=0.8",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
]
xai = [
    "captum>=0.7.0",
]
tracking = [
    "wandb>=0.17.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asvspoof5_domain_invariant_cm"]

[tool.ruff]
line-length = 80
target-version = "py310"
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
